# little-math-things

./: CMakeLists.txt  main.cpp
flt/: flt.cpp
src/: Fermats_Little_Theorem.cpp  Lucas_Lehmer_Test.cpp  includes.h  main.cpp
src/apps/: apps.h
src/apps/Fermats-Little-Theorem/: CMakeLists.txt  Fermats_Little_Theorem.cpp
src/apps/Lucas-Lehmer-Test/: CMakeLists.txt  Lucas_Lehmer_Test.cpp
src/apps/cli/: CMakeLists.txt  cli-app.cpp
src/lib/: apps.h
src/lib/Administrative_Assistant/: Administrative_Assistant.cpp  Administrative_Assistant.h
